--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
